<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Sanbot Café</string>

    <!--MainActivity-->
    <string name="btn_start">Pedir</string>

    <!--CategoriaBebidasActivity-->
    <string name="bebidas_alcoolicas">Bebidas alcoólicas</string>
    <string name="bebidas_sem_alcool">Bebidas Sem Álcool</string>

    <!--IdadeAlertaActivity-->
    <string name="alert_18">Você deve ter 18 anos de idade ou mais para comprar bebida(s) alcoólica(s).</string>
    <string name="maior_18">Tenho 18 anos ou mais</string>
    <string name="menor_18">Não tenho 18 anos</string>

    <!--ItensDePedidoidas alcoólicas-->
    <string name="vinho">Vinho R$3,50</string>
    <string name="cerveja">Cerveja R$4,00</string>

    <!--ItensDePedidoidas Sem Álcool-->
    <string name="cha">Chá R$2,80</string>
    <string name="cafe">Café R$3,50</string>
    <string name="suco">Sucos R$3,50</string>
    <string name="refri">Refrigerante R$2,50</string>
    <string name="agua">Água R$2,00</string>

    <!--QuantidadeActivity-->
    <string name="tv_quantidade">Quantidade:</string>
    <string name="tv_algo_mais">Algo mais?</string>
    <string name="btn_proximo">Próximo >></string>

    <!--ConfirmarPedidoActivity-->
    <string name="confirm_pedido">Confirmar</string>
    <string name="cancel_pedido">Cancelar</string>
    <string name="titulo_activity_confirmar_pedido">Pedido</string>
    <string name="tv_desconto">Desconto %s</string>
    <string name="tv_total">Total: %s</string>

    <!--CancelarPedidoDialogFragment-->
    <string name="cancel_pedido_dialog_fragment_title">Cancelar pedido?</string>
    <string name="cancel_pedido_dialog_fragment_message">Tem certeza de que deseja cancelar?</string>
    <string name="cancel_pedido_dialog_fragment_continue">Eu quero continuar</string>
    <string name="cancel_pedido_dialog_fragment_cancel">Eu quero cancelar</string>

    <string name="tts_not_initialized">Texto para fala não inicializado</string>
    <string name="no_text">Nenhum texto para ser sintetizado</string>
    <string name="text_limit">Texto é maior que o limite permitido</string>
    <string name="lang_unavailable">Idioma pt-BR indisponível</string>

    <string name="btn_qtd_1">1</string>
    <string name="btn_qtd_2">2</string>
    <string name="btn_qtd_3">3</string>
    <string name="btn_qtd_4">4</string>
    <string name="btn_qtd_5">5</string>

    <string name="tv_itens_column">Itens</string>
    <string name="tv_qtd_itens">Qtd.</string>
    <string name="tv_preco">Preço</string>
    <string name="tv_total_final">Total %s</string>
</resources>