<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_proibido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_proibido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_proibido"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="45dp"

        android:text="@string/alert_18"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_proibido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp">

        <Button
            android:id="@+id/btn_maior_de_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:background="@drawable/transparent_bg"
            android:onClick="maiorDeIdade"
            android:text="@string/maior_18"
            android:textColor="#00C853"
            android:textSize="27sp" />

        <Button
            android:id="@+id/btn_menor_de_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_bg"
            android:onClick="maiorDeIdade"
            android:text="@string/menor_18"
            android:textColor="#D50000"
            android:textSize="27sp" />
    </LinearLayout>

</RelativeLayout>
